2011-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nntp.el (nntp-open-connection): Set TCP keepalive option.

2011-05-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-full): Add convenience method.  Fix logic.
	(registry-insert): Use it.  Fix logic here too.

	* gnus-registry.el (gnus-registry-insert): Add wrapper that calls
	`registry-prune' if `registry-full' returns t.
	(gnus-registry-handle-action)
	(gnus-registry-get-or-make-entry, gnus-registry-set-id-key)
	(gnus-registry-usage-test): Use it.

2011-05-07  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-link): Make shr-link inherit from link by default.

2011-05-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* shr.el (shr-urlify, shr-link): Fix shr-link face.

2011-05-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* shr.el (shr-urlify, shr-link): Still broken but at least doesn't
	error out because the face is not a list.

2011-05-05  Glenn Morris  <rgm@gnu.org>

	* proto-stream.el (gnutls-negotiate): Fix declarations.

	* gnus-start.el (gnus-propagate-marks): Declare.

2011-05-04  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-reindex): Fix percentage message.

	* proto-stream.el (network-stream-open-starttls): Adjust to call
	`gnutls-negotiate' with :process and :hostname arguments.

2011-05-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* shr.el: Add shr-link face for links.
	(shr-urlify): Use it.

	* registry.el (registry-insert): Make error message more helpful.

2011-05-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-schedule-image-fetching):
	Use url-queue-retrieve, if it exists.

	* shr.el (shr-tag-img): Ditto.

	* gnus.el: Autoload more gnus-agent functions.

	* gnus-art.el (gnus-request-article-this-buffer): Store articles in the
	agent if we haven't already (bug#8502).

	* gnus-async.el (gnus-async-article-callback): Put prefetched articles
	into the Agent, too.

	* gnus-agent.el (gnus-agent-store-article): New function.
